--- a/src/global.css
+++ b/src/global.css
@@ -54,7 +54,6 @@ header button:hover {
 main {
   display: flex;
   justify-content: center;
-  overflow: hidden; /* prevents scrollbar issues on sliding transitions */
   position: relative; /* used by Paper with side */
 }
 
